# datieve

./: .gitignore  ARCHITECTURE.md  INSTALL.md  README.md  build.sh
.github/workflows/: release.yml
agent/: .gitignore  Cargo.toml  README.md  build.sh
agent/scripts/: build-ollvm.sh  build-personalized.sh
agent/src/: cli.rs  compat.rs  config.rs  discovery_udp.rs  error.rs  lib.rs  main.rs  static_web.rs
agent/src/api/: admin.rs  auth.rs  bookmarks.rs  browse.rs  fs.rs  fs_access.rs  fs_props.rs  middleware.rs  mod.rs  search.rs
agent/src/auth/: mod.rs  password.rs
agent/src/crypto/: mod.rs  tls.rs
agent/src/db/: mod.rs  pool.rs  schema.rs  scope.rs
agent/src/engine/: mod.rs
agent/src/indexer/: consistency.rs  inotify.rs  maintenance.rs  matcher.rs  mod.rs  scan_orchestrator.rs  scanner.rs  statx.rs  writer.rs
agent/web/: input.css  package-lock.json  package.json  tailwind.config.js
app-flutter/: README.md  analysis_options.yaml  build.sh  pubspec.yaml
app-flutter/lib/: main.dart
app-flutter/lib/models/: bookmark.dart  file_tag.dart  fm_clipboard.dart  fm_menu_state.dart  fm_operation_card.dart  fm_search_filters.dart  fm_undo_item.dart  local_tab.dart  palette_command.dart
app-flutter/lib/screens/: demo_screen.dart  discovery_screen.dart  file_manager_screen.dart  login_screen.dart  setup_screen.dart
app-flutter/lib/state/: datieve_state.dart
app-flutter/lib/theme/: css_tokens.dart  datieve_theme.dart
app-flutter/lib/utils/: app_dir.dart  bookmark_store.dart  custom_folder_icons_store.dart  custom_places_store.dart  file_icon_helpers.dart  file_type_helpers.dart  fm_visible_files.dart  format_bytes.dart  hidden_devices_store.dart  menu_position.dart  mount_mappings_store.dart  places_aliases_store.dart  search_entry_helpers.dart  settings_helpers.dart  setup_helpers.dart  tag_store.dart  trash_purge.dart  trash_settings_store.dart
app-flutter/lib/widgets/: app_error_boundary.dart  datieve_widgets.dart  file_compact_grid.dart  file_list_view.dart  fm_admin_dashboard.dart  fm_command_palette.dart  fm_context_menus.dart  fm_drag_drop.dart  fm_file_icon.dart  fm_filters_panel.dart  fm_folder_icon_picker.dart  fm_info_pane.dart  fm_open_with_dialog.dart  fm_properties_dialog.dart  fm_property_widgets.dart  fm_rename_dialog.dart  fm_settings_panel.dart  fm_settings_widgets.dart  fm_shortcuts_dialog.dart  fm_status_bar.dart  fm_thumbnail.dart  tag_badges.dart
app-flutter/linux/: CMakeLists.txt
app-flutter/rust/: Cargo.toml
app-flutter/rust/examples/: connect_test.rs
app-flutter/rust/src/: agent_api.rs  bridge.rs  file_stream.rs  fm_state.rs  frb_generated.rs  lib.rs  session.rs  setup_state.rs  sse_stream.rs
app-flutter/rust/src/api/: datieve.rs  fs.rs  mod.rs
app-flutter/rust/src/core/: mod.rs
app-flutter/rust/src/file_manager/: local.rs  mod.rs
app-flutter/rust_builder/: pubspec.yaml
(+19 files in other folders)
