[package]
name = "datieve"
version = "0.1.0"
edition = "2021"
description = "Datieve NAS Indexing Agent"

[lib]
name = "datieve"
path = "src/lib.rs"

[[bin]]
name = "datieve"
path = "src/main.rs"


[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["limit"] }
tower-http = { version = "0.5", features = ["cors", "limit", "request-id", "trace", "timeout"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
jwalk = "0.8"
argon2 = "0.5"
rand = "0.8"
rand_chacha = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
governor = "0.6"
sha2 = "0.10"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
secrecy = "0.8.0"
percent-encoding = "2.3"
glob = "0.3"
axum-server = { version = "0.7", features = ["tls-rustls"] }
rcgen = "0.13"
time = "0.3"
http-body-util = "0.1.3"
bytes = "1.11.1"
local-ip-address = "0.6.11"
lru = "0.18.0"
hex = "0.4.3"
libc = "0.2.186"
thiserror = "2.0.18"
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
