[package]
name = "datieve_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls", "stream"] }
local-ip-address = "0.6.11"
futures-util = "0.3.32"
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "linux-native"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-pki-types = "1"
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
crc32fast = "1.4"
hex = "0.4"
url = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
trash = "3"
directories = "6"
once_cell = "1"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "bmp", "ico", "tiff", "webp"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = "0.3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }